--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ORMDR
-Version: 1.1
-Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Taesung Park 
-Maintainer: Eun-Kyung Lee <gracesle@snu.ac.kr> 
+Version: 1.2
+Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Junghyun Namkung, Taesung Park 
+Maintainer: Junghyun Namkung <jh.namkung@gmail.com>
 Title:  ORMDR
 Description: Odds ratio based multifactor-dimensionality reduction method for detecting gene-gene interactions
 License: GPL version 2 or newer 
-Packaged: Fri Mar 16 14:10:18 2007; vaio
+Packaged: Fri Mar  7 17:45:20 2008; hornik
