--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ORMDR
-Version: 1.2
+Version: 1.3
 Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Junghyun Namkung, Taesung Park 
 Maintainer: Junghyun Namkung <jh.namkung@gmail.com>
 Title:  ORMDR
 Description: Odds ratio based multifactor-dimensionality reduction method for detecting gene-gene interactions
-License: GPL version 2 or newer 
-Packaged: Fri Mar  7 17:45:20 2008; hornik
+License: GPL (>= 2)
+Packaged: Fri Aug  1 21:06:29 2008; skon
