--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,12 @@
 Package: ORMDR
-Version: 1.3
-Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Junghyun Namkung, Taesung Park 
+Version: 1.3-1
+Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Junghyun Namkung,
+        Taesung Park
 Maintainer: Junghyun Namkung <jh.namkung@gmail.com>
-Title:  ORMDR
-Description: Odds ratio based multifactor-dimensionality reduction method for detecting gene-gene interactions
+Title: ORMDR
+Description: Odds ratio based multifactor-dimensionality reduction
+        method for detecting gene-gene interactions
 License: GPL (>= 2)
-Packaged: Fri Aug  1 21:06:29 2008; skon
+Packaged: 2012-10-29 08:57:22 UTC; ripley
+Repository: CRAN
+Date/Publication: 2012-10-29 08:57:22
