--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ORMDR
-Version: 1.3-1
+Version: 1.3-2
 Author: Eun-Kyung Lee, Sung Gon Yi, Yoojin Jung, Junghyun Namkung,
         Taesung Park
 Maintainer: Junghyun Namkung <jh.namkung@gmail.com>
@@ -7,6 +7,6 @@ Title: ORMDR
 Description: Odds ratio based multifactor-dimensionality reduction
         method for detecting gene-gene interactions
 License: GPL (>= 2)
-Packaged: 2012-10-29 08:57:22 UTC; ripley
+Packaged: 2012-12-21 02:55:51 UTC; nkjh
 Repository: CRAN
-Date/Publication: 2012-10-29 08:57:22
+Date/Publication: 2012-12-21 08:06:13
